# yet-another-unifinished-project

./: README.md  app.py  package-lock.json  package.json  pyproject.toml
src/: App.tsx
src/components/: BarChart.tsx
