[tool.poetry]
name = "yet-another-unifinished-project"
version = "0.1.0"
description = ""
authors = ["Kairi Sameshima <kairisameshima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
